# kasa-remote

./: .gitignore  Cargo.toml  README.md  build.rs  example_cfg.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
hardware/: fp-lib-table  kasa-remote.kicad_pcb  kasa-remote.kicad_prl  kasa-remote.kicad_pro  kasa-remote.kicad_sch  sym-lib-table
hardware/Documentation/: bom_scratch.ods  kasa-remote-bom.ods
hardware/libraries/AP2112k_3_TRG1/: 2024-02-27_00-24-44.kicad_sym
hardware/libraries/CUHS20F30_H3F/KiCADv6/: 2024-02-27_23-55-33.kicad_sym
hardware/libraries/DMP2045U/: 2024-02-27_00-24-22.kicad_sym
hardware/libraries/DMP2045U/footprints.pretty/: SOT-23_DIO-L.kicad_mod  SOT-23_DIO-M.kicad_mod  SOT-23_DIO.kicad_mod
hardware/libraries/ESP32-S3-WROOM-1-N4/: XCVR_ESP32-S3-WROOM-1-N4.kicad_mod
hardware/libraries/MAX17048_T10/: 2024-02-27_00-23-59.kicad_sym
hardware/libraries/MCP7381T_2ACI_OT/: 2024-02-27_00-22-55.kicad_sym
hardware/libraries/S2B_PH_SM4_TB/KiCADv6/: 2024-03-02_18-28-54.kicad_sym
hardware/libraries/USB4105-GF-A/: GCT_USB4105-GF-A.kicad_mod  USB4105-GF-A.kicad_sym
hardware/libraries/duck/: back_silk.kicad_mod  cigcat_small.kicad_mod  duck.kicad_mod  duck_40mm.kicad_mod  front_silk.kicad_mod  gronch.kicad_mod  thanks.kicad_mod  thanks_ext.kicad_mod  yoder.kicad_mod
src/: kasa_control.rs  main.rs  module_runner.rs  modules.rs  peripheral_util.rs  wifi.rs
src/modules/: kasa_control.rs  snake.rs  test.rs
src/peripheral_util/: battery_monitor.rs  buttons.rs  display.rs  rotary.rs  wifi.rs
(+3 files in other folders)
