[package]
name = "kasa-remote"
version = "0.1.0"
authors = ["Matthew Smith <guitarbass95@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1"}#"0.47.3" }
rust_kasa = { path = "../rust_kasa"}
toml-cfg    = "=0.1.3"
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
#sh1106 = "0.5.0"
#this version supports embedded-hal 1, original maintainer hasn't had the time to handle the pull request
sh1106 = {git = "https://github.com/techmccat/sh1106.git", branch="hal-1"}
#max170xx = "0.1.1"
max170xx = {git = "https://github.com/Paumanok/max170xx-rs.git", branch="hal-1_port"}
embedded-hal = {version ='^1.0.0'}
embedded-hal-bus = {version="0.1.0", features=['std']}
#embedded-time = "0.12.1"

[build-dependencies]
embuild = "0.31.3"
toml-cfg    = "=0.1.3"
